# instagram-growth-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.omc/: project-memory.json
.omc/state/: agent-replay-c2b29c10-7042-4d02-ad3e-3b507f1c595e.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/c2b29c10-7042-4d02-ad3e-3b507f1c595e/: autopilot-state.json  cancel-signal-state.json  session-started.json
docs/: instagram-growth-intelligence-flow.md
ig_cli/: __init__.py  config.py  db.py  main.py  market.py
ig_cli/core/: __init__.py  client.py
tests/: test_cli.py  test_client.py  test_config.py  test_db.py  test_market.py
