[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instagram-growth-cli"
version = "0.1.0"
description = "Instagram trend and growth intelligence from your terminal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prince Pal" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "instaloader>=4.15.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[project.scripts]
ig = "ig_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["ig_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
